[FIX] Breadcrumbs - wrapping when the name of the page is too long.

--- a/src/assets/toolkit/styles/6-components/navigation/_components.breadcrumbs.scss
+++ b/src/assets/toolkit/styles/6-components/navigation/_components.breadcrumbs.scss
@@ -22,8 +22,7 @@ $breadcrumbs-separator-color: $icon-weakest-color;
 
   // Breadcrumb item (current page and links)
   > li {
-    display:     inline-block;
-    white-space: nowrap;
+    display:     inline;
 
     // First item? => Home with icon
     &:first-child a {
